# vovk-hello-world

./: .gitignore  .prettierignore  .vovk.json  README.md  _config.yml  biome.json  demo.cast  demo_python.py  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.mjs  tsconfig.bundle.json  tsconfig.json  vovk.config.js
.github/workflows/: main.yml
.vovk-schema/: _meta.json  root.json  static.json
.vovk-schema/segments/: root.json  static.json
__demo_python/: pyproject.toml
__demo_python/src/vovk_hello_world_demo/: __init__.py
_layouts/: default.html
assets/css/: dark-mode.css
demo/node/: local.mts  packaged.mts
demo/python/: local.py  packaged.py
demo/rust/local/: Cargo.toml
demo/rust/packaged/: Cargo.toml
demo_node/: index.mts
demo_rust/: Cargo.toml
demo_rust/src/: main.rs
dist_python/: README.md  pyproject.toml
dist_python/data/: schema.json
dist_python/src/vovk_hello_world/: __init__.py  schema.json
dist_python/src/vovk_showcase/: __init__.py
dist_rust/: Cargo.toml  README.md
dist_rust/data/: schema.json
dist_rust/src/: lib.rs  schema.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/openapi/: page.tsx
src/app/scalar/: page.tsx
src/client/root/: index.ts  openapi.json  schema.ts
src/client/static/: index.ts  openapi.json  (+2 more)
src/components/: UserForm.tsx
src/vovk/: metadata.ts  vovk-metadata.json
test/node/: local.test.mts  packaged.test.mts
test/python/: local_test.py  packaged_test.py  requirements.txt
test/rust/: Cargo.toml
tmp_prebundle/: index.ts  openapi.json  openapi.ts  schema.ts
(+24 files in other folders)
