[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vovk_hello_world"
version = "0.1.0"
description = ""
requires-python = ">=3.7"
license = {text = "MIT"}

authors = [


]
dependencies = [
    "requests",
    "jsonschema",
    "rfc3987",
    "urllib3==1.26.15",

]

[project.optional-dependencies]
dev = [
    "types-requests",
    "types-jsonschema",
]



